Practicks/cpp/h/compiling_error.txt
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:7:8: error: conflicting types for ‘add’
 double add(double a, double b)//сложение дробных чисел
        ^
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:3:5: note: previous definition of ‘add’ was here
 int add(int a,int b)//сложение целых чисел
     ^
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:15:8: error: conflicting types for ‘sub’
 double sub(double a, double b)//вычитание дробных чисел
        ^
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:11:5: note: previous definition of ‘sub’ was here
 int sub(int a, int b)//вычитание целых чисел
     ^
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:23:8: error: conflicting types for ‘mul’
 double mul(double a, double b)//умножение дробных чисел
        ^
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:19:5: note: previous definition of ‘mul’ was here
 int mul(int a, int b)//умножение целых чисел
     ^
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h: In function ‘divi’:
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:33:3: error: ‘cout’ undeclared (first use in this function)
   cout << "Деление на 0" << endl;
   ^
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:33:3: note: each undeclared identifier is reported only once for each function it appears in
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:33:38: error: ‘endl’ undeclared (first use in this function)
   cout << "Деление на 0" << endl;
                                      ^
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h: At top level:
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:38:8: error: conflicting types for ‘divi’
 double divi(double a, double b)//деление дробных чисел
        ^
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:27:5: note: previous definition of ‘divi’ was here
 int divi(int a, int b)//деление целых чисел
     ^
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h: In function ‘divi’:
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:44:3: error: ‘cout’ undeclared (first use in this function)
   cout << "Деление на 0" << endl;
   ^
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:44:38: error: ‘endl’ undeclared (first use in this function)
   cout << "Деление на 0" << endl;
                                      ^
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h: In function ‘Programma5_4’:
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:52:5: error: ‘cout’ undeclared (first use in this function)
     cout << "Введите a,b" << endl;
     ^
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:52:37: error: ‘endl’ undeclared (first use in this function)
     cout << "Введите a,b" << endl;
                                     ^
/home/dima/github/OOP/Practicks/cpp/h/Programm5_4.h:53:5: error: ‘cin’ undeclared (first use in this function)
     cin >> a >> b;
     ^
